@startuml
skinparam monochrome reverse


title __DECORATOR's Class Diagram__\n

  namespace wasteless.server {
    namespace export{
    namespace decorator {
      class wasteless.server.export.decorator.GreenReportDecorator {
          + GreenReportDecorator()
          + dumpReport()
          + setReportColor()
      }

      class wasteless.server.export.decorator.RedReportDecorator {
                + RedReportDecorator()
                + dumpReport()
                + setReportColor()
      }

       enum ReportColor {
               GRAY
               GREEN
               RED
      }

      abstract class wasteless.server.export.decorator.ReportDecorator {
                + ReportDecorator()
                + dumpReport()
      }
    }

    namespace report {
          class wasteless.server.export.report.JsonReport {
              + JsonReport()
              + dumpReport()
              + getReportColor()
              + setReportColor()
          }

           interface wasteless.server.export.report.Report {
                    {abstract} + dumpReport()
                    {abstract} + setReportColor()
            }
           enum ReportType {
                   JSON_REPORT
                   TEXT_REPORT
             }

           class wasteless.server.export.report.TextReport {
                     + TextReport()
                     + dumpReport()
                     + getReportColor()
                     + setReportColor()
                     - writeToFile()
                 }
        }
    }
  }


  wasteless.server.export.decorator.GreenReportDecorator -up-|> wasteless.server.export.decorator.ReportDecorator
  wasteless.server.export.decorator.RedReportDecorator -up-|> wasteless.server.export.decorator.ReportDecorator
  wasteless.server.export.decorator.ReportDecorator .up.|> wasteless.server.export.report.Report
  wasteless.server.export.decorator.ReportDecorator o-- wasteless.server.export.report.Report : decoratedReport

wasteless.server.export.report.JsonReport .up.|> wasteless.server.export.report.Report
  wasteless.server.export.report.JsonReport o-- wasteless.server.export.decorator.ReportColor : reportColor
  wasteless.server.export.report.TextReport .up.|> wasteless.server.export.report.Report
  wasteless.server.export.report.TextReport o-- wasteless.server.export.decorator.ReportColor : reportColor



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
